# ros-openpose

./: .gitignore  README.md
openpose_ros_msgs/: CMakeLists.txt
openpose_ros_msgs/msg/: BoundingBoxes.msg
openpose_ros_node/: CMakeLists.txt  package.xml
openpose_ros_node/cfg/: config.cfg
openpose_ros_node/config/: config.yaml
openpose_ros_node/include/openpose_ros_node/: openpose_ros.hpp
openpose_ros_node/launch/: 2d.launch  openpose.launch
openpose_ros_node/src/: main.cpp  openpose_ros.cpp  openpose_ros_node.cpp
